--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
-  "name": "node-farm",
-  "version": "1.0.0",
-  "description": "Learning node.js",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/12wollmana/Udemy-NodeJS-Node_Farm.git"
-  },
-  "author": "Aaron Wollman",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/12wollmana/Udemy-NodeJS-Node_Farm/issues"
-  },
-  "homepage": "https://github.com/12wollmana/Udemy-NodeJS-Node_Farm#readme"
+    "name": "node-farm",
+    "version": "1.0.0",
+    "description": "Learning node.js",
+    "main": "index.js",
+    "scripts": {
+        "start": "nodemon index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/12wollmana/Udemy-NodeJS-Node_Farm.git"
+    },
+    "author": "Aaron Wollman",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/12wollmana/Udemy-NodeJS-Node_Farm/issues"
+    },
+    "homepage": "https://github.com/12wollmana/Udemy-NodeJS-Node_Farm#readme",
+    "dependencies": {
+        "slugify": "^1.4.6"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.6"
+    }
 }
